rev 1.6.1 fix backdrop blur on ios

--- a/src/static/css/format.css
+++ b/src/static/css/format.css
@@ -42,6 +42,7 @@ header {
   z-index: 10000;
   background-color: rgba(255, 255, 255, 0.01);
   backdrop-filter: blur(40px);
+  -webkit-backdrop-filter: blur(40px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -259,6 +260,7 @@ span {
   height: 100%;
   width: 100%;
   backdrop-filter: blur(67px);
+  -webkit-backdrop-filter: blur(67px);
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -279,6 +281,7 @@ span {
 .card-content-info {
   z-index: 1;
   backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
   background: rgba(0, 0, 0, 0.4);
   width: 95%;
   height: 240px;
@@ -346,6 +349,7 @@ span {
   border-radius: 10px;
   background-color: rgba(150, 150, 150, 0.06);
   backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
   padding: 30px;
   flex-direction: row;
 }
